--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_PATH_HOST=./www/html
 APP_PATH_CONTAINER=/var/www/html
-VHOST_APP_NOTE_API=./hosts/apache/vhost-note-api.conf
+VHOST_APP_EQUIP=./hosts/apache/vhost-equip.conf
 VHOST_CONTAINER=/etc/apache2/sites-enabled/000-default.conf
 MYSQL_PATH_HOST=./mysql
 MYSQL_PATH_CONTAINER=/var/lib/mysql
