--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ VHOST_CONTAINER=/etc/apache2/sites-enabled/000-default.conf
 MYSQL_PATH_HOST=./mysql
 MYSQL_PATH_CONTAINER=/var/lib/mysql
 IMAGE_PHP_APACHE_8_1=./images/php/php-apache
-LOGS_PATH_APP = ./logs
-LOGS_PATH_CONTAINER_APACHE = /etc/httpd/logs
+LOGS_PATH_APP=./logs
+LOGS_PATH_CONTAINER_APACHE=/etc/httpd/logs
 
